kubernetes/Tenark.HttpApi.Host/base/tenark-httpapi-host-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ternark-httpapi-host
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ternark-httpapi-host
  template:
    metadata:
      labels:
        app: ternark-httpapi-host
    spec:
      containers:
      - name: ternark-httpapi-host
        image: tenark.azurecr.io/ternark-httpapi-host:v0.0.17
        resources:
          limits:
            cpu: "2"
            memory: "2048Mi"
          requests:
            cpu: "0.5"
            memory: "512Mi"
