kubernetes/Tenark.HttpApi.Host/base/tenark-httpapi-host-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenark-httpapi-host-service
spec:
  selector:
    app: tenark-httpapi-host
  ports:
    - port: 8080
      targetPort: 8080
